--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
             data-sap-ui-libs="sap.m,sap.ui.commons,sap.ui.table,sap.ui.layout"
             data-sap-ui-theme="sap_bluecrystal"
             data-sap-ui-bindingSyntax="complex" data-sap-ui-compatVersion="edge"
-            data-sap-ui-resourceroots='{"myapp": "./"}'>
+            data-sap-ui-resourceroots='{"myapp": "/"}'>
     </script>
 
     <!-- ext lib 
