--- a/app/index.html
+++ b/app/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
+    <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
 
-    <script src="resources/sap-ui-core.js" id="sap-ui-bootstrap"
-            data-sap-ui-libs="sap.m,sap.ui.commons,sap.ui.table,sap.ui.layout"
-            data-sap-ui-theme="sap_bluecrystal"
-            data-sap-ui-bindingSyntax="complex" data-sap-ui-compatVersion="edge"
-            data-sap-ui-resourceroots='{"myapp": "/"}'>
-    </script>
+        <script src="resources/sap-ui-core.js" id="sap-ui-bootstrap"
+                data-sap-ui-libs="sap.m,sap.ui.commons,sap.ui.table,sap.ui.layout"
+                data-sap-ui-theme="sap_bluecrystal"
+                data-sap-ui-bindingSyntax="complex" data-sap-ui-compatVersion="edge"
+                data-sap-ui-resourceroots='{"myapp": "/"}'>
+        </script>
+        <link href="css/c3.min.css" rel="stylesheet" type="text/css" />
 
-    <!-- ext lib 
-    <script src="ext_lib/sprintf.min.js"></script>
-    -->
+        <script src="libs/c3.min.js"></script>
+        <!-- ext lib 
+        <script src="ext_lib/sprintf.min.js"></script>
+        -->
 
-    <script>
-        sap.ui.getCore().attachInit(function() {
-                    app: new sap.ui.core.ComponentContainer({
-                        height : "100%",
-                        name : "myapp"
-                    }).placeAt("content");
-            });
-    </script>
+        <script>
+                    jQuery.sap.require("sap/ui/thirdparty/d3");
 
-</head>
+                    sap.ui.getCore().attachInit(function () {
+                        app: new sap.ui.core.ComponentContainer({
+                            height: "100%",
+                            name: "myapp"
+                        }).placeAt("content");
+                    });
+        </script>
 
-<body class="sapUiBody" role="application">
-<div id="content"/>
-</body>
+    </head>
+
+    <body class="sapUiBody" role="application">
+        <div id="content"/>
+    </body>
 
 </html>
