--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
         <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
 
-        <script src="resources/sap-ui-core.js" id="sap-ui-bootstrap"
+<script src="https://openui5.hana.ondemand.com/1.64.1/resources/sap-ui-core.js" id="sap-ui-bootstrap"
                 data-sap-ui-libs="sap.m,sap.ui.commons,sap.ui.table,sap.ui.layout"
                 data-sap-ui-theme="sap_bluecrystal"
                 data-sap-ui-bindingSyntax="complex" data-sap-ui-compatVersion="edge"
